--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <section class="section">
 <h2>Minecraft Challenges & Hardcore Survival</h2>
 <p>Epic Clutches • Insane Builds • Legendary Moments</p>
-<a href="https://youtube.com/@wiseplaymcofficial" target="_blank" class="btn">Subscribe on YouTube</a>
+<a href="https://youtube.com/@WiseplayMCOfficial" target="_blank" class="btn">Subscribe on YouTube</a>
 </section>
 
 <footer>
@@ -30,4 +30,5 @@
 
 </body>
 </html>
+
 
