--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 © 2026 WiseplayMC | Created by Vihaan
 </footer>
 
+ <div>
+  <img src="./sketch.png" alt="WiseplayMC Sketch" width="300">
+</div>
+
+  
+
 </body>
 </html>
+
 
 
