--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 © 2026 WiseplayMC | Created by Vihaan
 </footer>
 
- <div>
+ <div class="mypic">
   <img src="./sketch.png" alt="WiseplayMC Sketch" width="300">
 </div>
 
@@ -36,6 +36,7 @@
 
 </body>
 </html>
+
 
 
 
