--- a/videos.html
+++ b/videos.html
@@ -15,6 +15,7 @@
 <a href="about.html">About</a>
 <a href="videos.html" class="active">Videos</a>
 <a href="business.html">Business</a>
+<a href="download.html">Download</a>
 </div>
 </nav>
 
@@ -50,3 +51,4 @@ Join Discord
 
 </body>
 </html>
+
