--- a/business.html
+++ b/business.html
@@ -15,6 +15,7 @@
 <a href="about.html">About</a>
 <a href="videos.html">Videos</a>
 <a href="business.html">Business</a>
+<a href="download.html">Download</a>
 </div>
 </nav>
 
@@ -32,3 +33,4 @@
 
 </body>
 </html>
+
