--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 <a href="about.html" class="active">About</a>
 <a href="videos.html">Videos</a>
 <a href="business.html">Business</a>
+<a href="download.html">Download</a>
 </div>
 </nav>
 
@@ -51,3 +52,4 @@ Visit Twitch
 
 </body>
 </html>
+
