--- a/download.html
+++ b/download.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WiseplayMC's Skin Download</title>
+  <title>WiseplayMC Downloads</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -16,59 +16,73 @@
 
     h1 {
       margin-top: 60px;
-      font-size: 40px;
-      text-shadow: 0 0 15px #00aaff;
+      font-size: 42px;
+      text-shadow: 0 0 20px #00aaff;
     }
 
-    .download-box {
-      margin-top: 50px;
-      padding: 40px;
-      background: rgba(0, 0, 0, 0.6);
-      width: 80%;
-      max-width: 500px;
-      margin-left: auto;
-      margin-right: auto;
-      border-radius: 20px;
-      box-shadow: 0 0 25px #00aaff;
+    .info-line {
+      margin-top: 40px;
+      font-size: 20px;
+      text-shadow: 0 0 10px #00aaff;
+    }
+
+    .info-line span {
+      margin: 0 20px;
+      padding: 10px 20px;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 12px;
+      box-shadow: 0 0 15px #00aaff;
+    }
+
+    .download-section {
+      margin-top: 80px;
     }
 
     .download-btn {
       display: inline-block;
-      margin-top: 25px;
-      padding: 15px 30px;
-      font-size: 20px;
+      padding: 18px 40px;
+      font-size: 22px;
       color: white;
       background: #007bff;
       text-decoration: none;
-      border-radius: 12px;
+      border-radius: 15px;
       transition: 0.3s ease;
+      box-shadow: 0 0 20px #00aaff;
     }
 
     .download-btn:hover {
       background: #00aaff;
-      box-shadow: 0 0 20px #00aaff;
+      box-shadow: 0 0 35px #00aaff;
+      transform: scale(1.05);
     }
 
     .back-btn {
-      display: inline-block;
-      margin-top: 40px;
+      display: block;
+      margin-top: 50px;
       color: #00aaff;
       text-decoration: none;
+      font-size: 18px;
     }
   </style>
 </head>
 
 <body>
 
-  <h1>WiseplayMC's Skin</h1>
+  <h1>WiseplayMC Downloads</h1>
 
-  <div class="download-box">
-    <p>Download my official Minecraft skin below 👇</p>
+  <!-- One Line Info -->
+  <div class="info-line">
+    <span>🔥 Mods Pack</span>
+    <span>✨ Shaders</span>
+    <span>🎨 Resource Packs</span>
+  </div>
 
-    <a class="download-btn" 
-       href="https://www.mediafire.com/file/rakzhpixe2gptb1/My_skin.png/file" 
+  <!-- Big Download Button -->
+  <div class="download-section">
+    <a class="download-btn"
+       href="https://www.mediafire.com/file/0noy452du1jb36s/WiseplayMC.zip/file"
        target="_blank">
-       Download WiseplayMC's Skin
+       ⬇ Download Full Pack
     </a>
   </div>
 
