--- a/download.html
+++ b/download.html
@@ -27,21 +27,22 @@
     }
 
     .info-line span {
-      margin: 0 20px;
-      padding: 10px 20px;
+      margin: 0 15px;
+      padding: 10px 18px;
       background: rgba(0, 0, 0, 0.5);
       border-radius: 12px;
       box-shadow: 0 0 15px #00aaff;
     }
 
     .download-section {
-      margin-top: 80px;
+      margin-top: 70px;
     }
 
     .download-btn {
       display: inline-block;
+      margin: 15px;
       padding: 18px 40px;
-      font-size: 22px;
+      font-size: 20px;
       color: white;
       background: #007bff;
       text-decoration: none;
@@ -77,13 +78,23 @@
     <span>🎨 Resource Packs</span>
   </div>
 
-  <!-- Big Download Button -->
+  <!-- Download Buttons -->
   <div class="download-section">
+
+    <!-- Full Pack -->
     <a class="download-btn"
        href="https://www.mediafire.com/file/0noy452du1jb36s/WiseplayMC.zip/file"
        target="_blank">
        ⬇ Download Full Pack
     </a>
+
+    <!-- Skin -->
+    <a class="download-btn"
+       href="https://www.mediafire.com/file/rakzhpixe2gptb1/My_skin.png/file"
+       target="_blank">
+       🎮 Download Official Skin
+    </a>
+
   </div>
 
   <a class="back-btn" href="index.html">⬅ Back to Home</a>
