--- a/download.html
+++ b/download.html
@@ -95,6 +95,13 @@
        🎮 Download Official Skin
     </a>
 
+    <!-- Sketches -->
+    <a class="download-btn"
+       href="https://www.mediafire.com/file/lyqdokj52xurecu/Sketches.zip/file"
+       target="_blank">
+       🖍️ WiseplayMC Sketches for Children
+    </a>
+
   </div>
 
   <a class="back-btn" href="index.html">⬅ Back to Home</a>
