--- a/index.html
+++ b/index.html
@@ -2,43 +2,47 @@
 <html>
 <head>
 <title>WiseplayMC - Home</title>
+
 <link rel="stylesheet" href="style.css">
+
+<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
 <nav>
-<h1>WiseplayMC</h1>
-<div>
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="videos.html">Videos</a>
-<a href="business.html">Business</a>
- <a href="download.html">Download</a>
-</div>
+    <div class="logo-container">
+        <img src="logo.png" alt="WiseplayMC Logo" class="logo">
+        <h1>WiseplayMC</h1>
+    </div>
+
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="videos.html">Videos</a>
+        <a href="business.html">Business</a>
+        <a href="download.html">Download</a>
+    </div>
 </nav>
 
 <section class="section">
-<h2>Minecraft Challenges & Hardcore Survival</h2>
-<p>Epic Clutches • Insane Builds • Legendary Moments</p>
-<a href="https://youtube.com/@WiseplayMCOfficial" target="_blank" class="btn">Subscribe on YouTube</a>
+    <h2>Minecraft Challenges & Hardcore Survival</h2>
+    <p>Epic Clutches • Insane Builds • Legendary Moments</p>
+
+    <a href="https://youtube.com/@WiseplayMCOfficial" target="_blank" class="btn">
+        Subscribe on YouTube
+    </a>
 </section>
 
-<footer>
-© 2026 WiseplayMC | Created by Vihaan
-</footer>
-
- <div class="mypic">
-  <img src="./sketch.png" alt="WiseplayMC Sketch" width="300">
+<div class="mypic">
+    <img src="sketch.png" alt="WiseplayMC Sketch" width="300">
 </div>
 
-  
+<footer>
+    © 2026 WiseplayMC | Created by Vihaan
+</footer>
 
 </body>
 </html>
-
-
-
-
-
