--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <nav>
     <div class="logo-container">
-        <img src="logo.png" alt="WiseplayMC Logo" class="logo">
+        <img src="logo.jepeg" alt="WiseplayMC Logo" class="logo">
         <h1>WiseplayMC</h1>
     </div>
 
@@ -44,3 +44,4 @@
 
 </body>
 </html>
+
