--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="videos.html">Videos</a></li>
             <li><a href="contact.html" class="active">Business Inquiries</a></li>
+            </li><a href="download.html">Download</a></li>
         </ul>
     </nav>
 </header>
@@ -31,3 +32,4 @@
 </footer>
 </body>
 </html>
+
