--- a/index.html
+++ b/index.html
@@ -31,3 +31,9 @@
 
 </body>
 </html>
+<img class="sketch-footer" src="sketch.png" alt="WiseplayMC Sketch Preview" 
+     style="margin: 30px auto 50px auto; display: block; width: 250px; 
+            border: 3px solid #00aaff; border-radius: 15px; 
+            box-shadow: 0 0 25px #00aaff; transition: 0.3s;"
+     onmouseover="this.style.transform='scale(1.05)'; this.style.boxShadow='0 0 35px #00aaff';"
+     onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 0 25px #00aaff';">
