--- a/videos.html
+++ b/videos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WiseplayMC - Videos</title>
+<title>WiseplayMC - Watch & Connect</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -51,4 +51,5 @@ Join Discord
 
 </body>
 </html>
+
 
