--- a/download.html
+++ b/download.html
@@ -85,7 +85,7 @@
     <a class="download-btn"
        href="https://www.mediafire.com/file/0noy452du1jb36s/WiseplayMC.zip/file"
        target="_blank">
-       ⬇ Download Full Pack
+       ⬇ Download Modpack
     </a>
 
     <!-- Skin -->
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
